# OpenglLearning

./: .editorconfig  .gitignore  CMakeLists.txt  OpenglLearning.sln  README.md
CMake/: x86_64-w64-mingw32.cmake
OpenglLearning/: OpenglLearning.vcxproj  OpenglLearning.vcxproj.filters  resource.h
OpenglLearning/res/shader/: fragmentshader.frag  vertexshader.vert
OpenglLearning/src/: OpenglLearning.cpp  OpenglLearning.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  WindowWrapper.cpp  WindowWrapper.h  main.cpp  stb_image.h
cmake/: x86_64-w64-mingw32.cmake
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb_image/include/: stb_image.h
res/shader/: fragmentshader.frag  shader.frag  shader.vert  vertexshader.vert
src/: App.cpp  App.h  Camera.cpp  Camera.h  OpenglLearning.cpp  OpenglLearning.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  WindowWrapper.cpp  WindowWrapper.h  main.cpp
